[package]
name = "fligt_control"
version = "0.1.0"
authors = ["KnobY <maximilian.brinkmann@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.8"
gio = "0.8"
gilrs = "0.7.2"
glib = "0.9.1"
cairo-rs = "0.8.0"
serial = "0.4.0"
nb = "0.1.2"
heapless = "0.5.2"

[dependencies.copter_defs]
path = "../copter_defs"


[dependencies.rc_framing]
path = "../rc_framing"
