[package]
authors = ["KnobY <maximilian.brinkmann@posteo.de>"]
edition = "2018"
name = "fligt_control"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.9.2"
nb = "1.0.0"
relm = "0.20.0"
relm-derive = "0.20.0"
serialport = "3.3.0"

[dependencies.copter_com]
path = "../copter_com"
